@@ -14,7 +14,7 @@
 	<name>RestaurantApp</name>
 	<description>Restaurant app for CTS and AWT</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>16</java.version>
 	</properties>
 	<dependencies>
 
@@ -106,15 +106,29 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>16</source>
-					<target>16</target>
-					<compilerArgs>--enable-preview</compilerArgs>
-				</configuration>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<source>16</source>-->
+<!--					<target>16</target>-->
+<!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-surefire-plugin</artifactId>-->
+<!--				<version>2.22.2</version>-->
+<!--				<configuration>-->
+<!--					<argLine>&#45;&#45;enable-preview</argLine>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<artifactId>maven-failsafe-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<argLine>&#45;&#45;enable-preview</argLine>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
         </plugins>
 	</build>
 </project>
